--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,6 @@
   </head>
   <body>
     <div id="root"></div>
+    <script type='text/javascript' src='../api-key/config.js'></script>
   </body>
 </html>
